--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "bootstrap-icons": "^1.5.0",
     "core-js": "^3.6.5",
     "mitt": "^2.1.0",
+    "sweetalert2": "^11.0.18",
     "vee-validate": "^4.4.5",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.4",
     "vue-router": "^4.0.0-0",
+    "vue-sweetalert2": "^4.3.1",
     "vue3-loading-overlay": "0.0.0"
   },
   "devDependencies": {
