--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@popperjs/core": "^2.9.2",
     "@vee-validate/i18n": "^4.1.20",
     "@vee-validate/rules": "^4.1.20",
+    "aos": "^2.3.4",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.5.0",
@@ -25,7 +26,8 @@
     "vue-axios": "^3.2.4",
     "vue-loading-overlay": "^4.0.3",
     "vue-router": "^4.0.0-0",
-    "vue-sweetalert2": "^4.3.1"
+    "vue-sweetalert2": "^4.3.1",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
