--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "vue-axios": "^3.2.4",
     "vue-loading-overlay": "^4.0.3",
     "vue-router": "^4.0.0-0",
-    "vue-sweetalert2": "^4.3.1",
-    "wowjs": "^1.1.3"
+    "vue-sweetalert2": "^4.3.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
