--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "vue-axios": "^3.2.4",
     "vue-router": "^4.0.0-0",
     "vue-sweetalert2": "^4.3.1",
-    "vue3-loading-overlay": "0.0.0"
+    "vue3-loading-overlay": "0.0.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
